test/bad/fieldpolicy/FieldWritePolicy.para
public class FieldWritePolicy {
    public static !({:}) int x;
}